Revision history for Perl extension Finance::Wesabe.

0.02  XXX
    - pod fixes
    - added Profile class

0.01  Thu Feb 26 2009
    - original version
